qt6/gen_qvariant.nim


proc fcQVariant_new(): ptr cQVariant {.importc: "QVariant_new".}
proc fcQVariant_new2(typeVal: pointer): ptr cQVariant {.importc: "QVariant_new2".}
proc fcQVariant_new3(other: pointer): ptr cQVariant {.importc: "QVariant_new3".}
proc fcQVariant_new4(i: cint): ptr cQVariant {.importc: "QVariant_new4".}
proc fcQVariant_new5(ui: cuint): ptr cQVariant {.importc: "QVariant_new5".}
proc fcQVariant_new6(ll: clonglong): ptr cQVariant {.importc: "QVariant_new6".}
proc fcQVariant_new7(ull: culonglong): ptr cQVariant {.importc: "QVariant_new7".}
proc fcQVariant_new8(b: bool): ptr cQVariant {.importc: "QVariant_new8".}
proc fcQVariant_new9(d: float64): ptr cQVariant {.importc: "QVariant_new9".}
proc fcQVariant_new10(f: float32): ptr cQVariant {.importc: "QVariant_new10".}
proc fcQVariant_new11(str: cstring): ptr cQVariant {.importc: "QVariant_new11".}
proc fcQVariant_new12(bytearray: struct_miqt_string): ptr cQVariant {.importc: "QVariant_new12".}
proc fcQVariant_new13(bitarray: pointer): ptr cQVariant {.importc: "QVariant_new13".}
proc fcQVariant_new14(string: struct_miqt_string): ptr cQVariant {.importc: "QVariant_new14".}
proc fcQVariant_new15(stringlist: struct_miqt_array): ptr cQVariant {.importc: "QVariant_new15".}
proc fcQVariant_new16(qchar: pointer): ptr cQVariant {.importc: "QVariant_new16".}
proc fcQVariant_new17(date: pointer): ptr cQVariant {.importc: "QVariant_new17".}
proc fcQVariant_new18(time: pointer): ptr cQVariant {.importc: "QVariant_new18".}
proc fcQVariant_new19(datetime: pointer): ptr cQVariant {.importc: "QVariant_new19".}
proc fcQVariant_new20(map: struct_miqt_map): ptr cQVariant {.importc: "QVariant_new20".}
proc fcQVariant_new21(hash: struct_miqt_map): ptr cQVariant {.importc: "QVariant_new21".}
proc fcQVariant_new22(size: pointer): ptr cQVariant {.importc: "QVariant_new22".}
proc fcQVariant_new23(size: pointer): ptr cQVariant {.importc: "QVariant_new23".}
proc fcQVariant_new24(pt: pointer): ptr cQVariant {.importc: "QVariant_new24".}
proc fcQVariant_new25(pt: pointer): ptr cQVariant {.importc: "QVariant_new25".}
proc fcQVariant_new26(line: pointer): ptr cQVariant {.importc: "QVariant_new26".}
proc fcQVariant_new27(line: pointer): ptr cQVariant {.importc: "QVariant_new27".}
proc fcQVariant_new28(rect: pointer): ptr cQVariant {.importc: "QVariant_new28".}
proc fcQVariant_new29(rect: pointer): ptr cQVariant {.importc: "QVariant_new29".}
proc fcQVariant_new30(locale: pointer): ptr cQVariant {.importc: "QVariant_new30".}
proc fcQVariant_new31(re: pointer): ptr cQVariant {.importc: "QVariant_new31".}
proc fcQVariant_new32(easing: pointer): ptr cQVariant {.importc: "QVariant_new32".}
proc fcQVariant_new33(uuid: pointer): ptr cQVariant {.importc: "QVariant_new33".}
proc fcQVariant_new34(url: pointer): ptr cQVariant {.importc: "QVariant_new34".}
proc fcQVariant_new35(jsonValue: pointer): ptr cQVariant {.importc: "QVariant_new35".}
proc fcQVariant_new36(jsonObject: pointer): ptr cQVariant {.importc: "QVariant_new36".}
proc fcQVariant_new37(jsonArray: pointer): ptr cQVariant {.importc: "QVariant_new37".}
proc fcQVariant_new38(jsonDocument: pointer): ptr cQVariant {.importc: "QVariant_new38".}
proc fcQVariant_new39(modelIndex: pointer): ptr cQVariant {.importc: "QVariant_new39".}
proc fcQVariant_new40(modelIndex: pointer): ptr cQVariant {.importc: "QVariant_new40".}
proc fcQVariant_new41(typeVal: cint): ptr cQVariant {.importc: "QVariant_new41".}
proc fcQVariant_new42(typeVal: pointer, copy: pointer): ptr cQVariant {.importc: "QVariant_new42".}
proc fcQVariant_operatorAssign(self: pointer, other: pointer): void {.importc: "QVariant_operatorAssign".}
proc fcQVariant_swap(self: pointer, other: pointer): void {.importc: "QVariant_swap".}
proc fcQVariant_userType(self: pointer, ): cint {.importc: "QVariant_userType".}
proc fcQVariant_typeId(self: pointer, ): cint {.importc: "QVariant_typeId".}
proc fcQVariant_typeName(self: pointer, ): cstring {.importc: "QVariant_typeName".}
proc fcQVariant_metaType(self: pointer, ): pointer {.importc: "QVariant_metaType".}
proc fcQVariant_canConvert(self: pointer, targetType: pointer): bool {.importc: "QVariant_canConvert".}
proc fcQVariant_convert(self: pointer, typeVal: pointer): bool {.importc: "QVariant_convert".}
proc fcQVariant_canView(self: pointer, targetType: pointer): bool {.importc: "QVariant_canView".}
proc fcQVariant_canConvertWithTargetTypeId(self: pointer, targetTypeId: cint): bool {.importc: "QVariant_canConvertWithTargetTypeId".}
proc fcQVariant_convertWithTargetTypeId(self: pointer, targetTypeId: cint): bool {.importc: "QVariant_convertWithTargetTypeId".}
proc fcQVariant_isValid(self: pointer, ): bool {.importc: "QVariant_isValid".}
proc fcQVariant_isNull(self: pointer, ): bool {.importc: "QVariant_isNull".}
proc fcQVariant_clear(self: pointer, ): void {.importc: "QVariant_clear".}
proc fcQVariant_detach(self: pointer, ): void {.importc: "QVariant_detach".}
proc fcQVariant_isDetached(self: pointer, ): bool {.importc: "QVariant_isDetached".}
proc fcQVariant_toInt(self: pointer, ): cint {.importc: "QVariant_toInt".}
proc fcQVariant_toUInt(self: pointer, ): cuint {.importc: "QVariant_toUInt".}
proc fcQVariant_toLongLong(self: pointer, ): clonglong {.importc: "QVariant_toLongLong".}
proc fcQVariant_toULongLong(self: pointer, ): culonglong {.importc: "QVariant_toULongLong".}
proc fcQVariant_toBool(self: pointer, ): bool {.importc: "QVariant_toBool".}
proc fcQVariant_toDouble(self: pointer, ): float64 {.importc: "QVariant_toDouble".}
proc fcQVariant_toFloat(self: pointer, ): float32 {.importc: "QVariant_toFloat".}
proc fcQVariant_toReal(self: pointer, ): float64 {.importc: "QVariant_toReal".}
proc fcQVariant_toByteArray(self: pointer, ): struct_miqt_string {.importc: "QVariant_toByteArray".}
proc fcQVariant_toBitArray(self: pointer, ): pointer {.importc: "QVariant_toBitArray".}
proc fcQVariant_toString(self: pointer, ): struct_miqt_string {.importc: "QVariant_toString".}
proc fcQVariant_toStringList(self: pointer, ): struct_miqt_array {.importc: "QVariant_toStringList".}
proc fcQVariant_toChar(self: pointer, ): pointer {.importc: "QVariant_toChar".}
proc fcQVariant_toDate(self: pointer, ): pointer {.importc: "QVariant_toDate".}
proc fcQVariant_toTime(self: pointer, ): pointer {.importc: "QVariant_toTime".}
proc fcQVariant_toDateTime(self: pointer, ): pointer {.importc: "QVariant_toDateTime".}
proc fcQVariant_toMap(self: pointer, ): struct_miqt_map {.importc: "QVariant_toMap".}
proc fcQVariant_toHash(self: pointer, ): struct_miqt_map {.importc: "QVariant_toHash".}
proc fcQVariant_toPoint(self: pointer, ): pointer {.importc: "QVariant_toPoint".}
proc fcQVariant_toPointF(self: pointer, ): pointer {.importc: "QVariant_toPointF".}
proc fcQVariant_toRect(self: pointer, ): pointer {.importc: "QVariant_toRect".}
proc fcQVariant_toSize(self: pointer, ): pointer {.importc: "QVariant_toSize".}
proc fcQVariant_toSizeF(self: pointer, ): pointer {.importc: "QVariant_toSizeF".}
proc fcQVariant_toLine(self: pointer, ): pointer {.importc: "QVariant_toLine".}
proc fcQVariant_toLineF(self: pointer, ): pointer {.importc: "QVariant_toLineF".}
proc fcQVariant_toRectF(self: pointer, ): pointer {.importc: "QVariant_toRectF".}
proc fcQVariant_toLocale(self: pointer, ): pointer {.importc: "QVariant_toLocale".}
proc fcQVariant_toRegularExpression(self: pointer, ): pointer {.importc: "QVariant_toRegularExpression".}
proc fcQVariant_toEasingCurve(self: pointer, ): pointer {.importc: "QVariant_toEasingCurve".}
proc fcQVariant_toUuid(self: pointer, ): pointer {.importc: "QVariant_toUuid".}
proc fcQVariant_toUrl(self: pointer, ): pointer {.importc: "QVariant_toUrl".}
proc fcQVariant_toJsonValue(self: pointer, ): pointer {.importc: "QVariant_toJsonValue".}
proc fcQVariant_toJsonObject(self: pointer, ): pointer {.importc: "QVariant_toJsonObject".}
proc fcQVariant_toJsonArray(self: pointer, ): pointer {.importc: "QVariant_toJsonArray".}
proc fcQVariant_toJsonDocument(self: pointer, ): pointer {.importc: "QVariant_toJsonDocument".}
proc fcQVariant_toModelIndex(self: pointer, ): pointer {.importc: "QVariant_toModelIndex".}
proc fcQVariant_toPersistentModelIndex(self: pointer, ): pointer {.importc: "QVariant_toPersistentModelIndex".}
proc fcQVariant_load(self: pointer, ds: pointer): void {.importc: "QVariant_load".}
proc fcQVariant_save(self: pointer, ds: pointer): void {.importc: "QVariant_save".}
proc fcQVariant_typeX(self: pointer, ): cint {.importc: "QVariant_type".}
proc fcQVariant_typeToName(typeId: cint): cstring {.importc: "QVariant_typeToName".}
proc fcQVariant_nameToType(name: cstring): cint {.importc: "QVariant_nameToType".}
proc fcQVariant_data(self: pointer, ): pointer {.importc: "QVariant_data".}
proc fcQVariant_constData(self: pointer, ): pointer {.importc: "QVariant_constData".}
proc fcQVariant_data2(self: pointer, ): pointer {.importc: "QVariant_data2".}
proc fcQVariant_setValue(self: pointer, avalue: pointer): void {.importc: "QVariant_setValue".}
proc fcQVariant_compare(lhs: pointer, rhs: pointer): pointer {.importc: "QVariant_compare".}
proc fcQVariant_toInt1(self: pointer, ok: ptr bool): cint {.importc: "QVariant_toInt1".}
proc fcQVariant_toUInt1(self: pointer, ok: ptr bool): cuint {.importc: "QVariant_toUInt1".}
proc fcQVariant_toLongLong1(self: pointer, ok: ptr bool): clonglong {.importc: "QVariant_toLongLong1".}
proc fcQVariant_toULongLong1(self: pointer, ok: ptr bool): culonglong {.importc: "QVariant_toULongLong1".}
proc fcQVariant_toDouble1(self: pointer, ok: ptr bool): float64 {.importc: "QVariant_toDouble1".}
proc fcQVariant_toFloat1(self: pointer, ok: ptr bool): float32 {.importc: "QVariant_toFloat1".}
proc fcQVariant_toReal1(self: pointer, ok: ptr bool): float64 {.importc: "QVariant_toReal1".}
proc fcQVariant_fromValue(value: pointer): pointer {.importc: "QVariant_fromValue".}
proc fcQVariant_delete(self: pointer) {.importc: "QVariant_delete".}
proc fcQVariantConstPointer_new(variant: pointer): ptr cQVariantConstPointer {.importc: "QVariantConstPointer_new".}
proc fcQVariantConstPointer_new2(param1: pointer): ptr cQVariantConstPointer {.importc: "QVariantConstPointer_new2".}
proc fcQVariantConstPointer_operatorMultiply(self: pointer, ): pointer {.importc: "QVariantConstPointer_operatorMultiply".}
proc fcQVariantConstPointer_operatorMinusGreater(self: pointer, ): pointer {.importc: "QVariantConstPointer_operatorMinusGreater".}
proc fcQVariantConstPointer_operatorAssign(self: pointer, param1: pointer): void {.importc: "QVariantConstPointer_operatorAssign".}
proc fcQVariantConstPointer_delete(self: pointer) {.importc: "QVariantConstPointer_delete".}


func init*(T: type QVariant, h: ptr cQVariant): QVariant =
  T(h: h)
proc create*(T: type QVariant, ): QVariant =

  QVariant.init(fcQVariant_new())
proc create*(T: type QVariant, typeVal: gen_qmetatype.QMetaType): QVariant =

  QVariant.init(fcQVariant_new2(typeVal.h))
proc create2*(T: type QVariant, other: QVariant): QVariant =

  QVariant.init(fcQVariant_new3(other.h))
proc create*(T: type QVariant, i: cint): QVariant =

  QVariant.init(fcQVariant_new4(i))
proc create*(T: type QVariant, ui: cuint): QVariant =

  QVariant.init(fcQVariant_new5(ui))
proc create*(T: type QVariant, ll: clonglong): QVariant =

  QVariant.init(fcQVariant_new6(ll))
proc create*(T: type QVariant, ull: culonglong): QVariant =

  QVariant.init(fcQVariant_new7(ull))
proc create*(T: type QVariant, b: bool): QVariant =

  QVariant.init(fcQVariant_new8(b))
proc create*(T: type QVariant, d: float64): QVariant =

  QVariant.init(fcQVariant_new9(d))
proc create*(T: type QVariant, f: float32): QVariant =

  QVariant.init(fcQVariant_new10(f))
proc create*(T: type QVariant, str: cstring): QVariant =

  QVariant.init(fcQVariant_new11(str))
proc create*(T: type QVariant, bytearray: seq[byte]): QVariant =
